[package]
name = "wf_inv"
version = "0.1.0"
edition = "2024"

[dependencies]
poggers = "1.2.1"
windows = { version = "0.54.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
] }
# libmem = "5.1.0"
# mem-rs = "0.2.3"
# proc_mem = "0.1.6"
# read-process-memory = "0.1.6"
# sysinfo = "0.37.0"
