[package]
name = "wf_inv"
version = "0.1.0"
authors = ["RemasteredArch"]

edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
wf_inv_auth_scanning.workspace = true
wf_inv_price_data.workspace = true
anyhow = "1.0.100"

[workspace]
members = ["lib/*"]
resolver = "3"

package.edition = "2024"
package.publish = false
package.license = "MPL-2.0"
package.repository = "https://github.com/RemasteredArch/wf_inv"

[workspace.lints]
clippy.nursery = "warn"
clippy.pedantic = "warn"

[workspace.dependencies]
wf_inv_auth_scanning = { version = "*", path = "./lib/wf_inv_auth_scanning/" }
wf_inv_price_data = { version = "*", path = "./lib/wf_inv_price_data/" }
