[package]
name = "wf_inv"
description = "scan a Warframe process to analyze inventory data"
version = "0.1.0"
authors = ["RemasteredArch"]

edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
wf_inv_auth_scanning.workspace = true
wf_inv_price_data.workspace = true
anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking"] }

[workspace]
members = ["lib/*"]
resolver = "3"

package.edition = "2024"
package.publish = false
package.license = "MPL-2.0"
package.repository = "https://github.com/RemasteredArch/wf_inv"

[workspace.lints]
clippy.nursery = "warn"
clippy.pedantic = "warn"

[workspace.dependencies]
wf_inv_auth_scanning = { version = "*", path = "./lib/wf_inv_auth_scanning/" }
wf_inv_price_data = { version = "*", path = "./lib/wf_inv_price_data/" }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
